--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
@@ -7,23 +8,46 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
-    <title>VacSched</title>
+    <title>CV-19VacSched</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <nav class="indigo darken-3">
+      <div class="nav-wrapper container">
+        <a href="/" class="brand-logo">COVID-19 Vaccinations</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <% if !is_logged_in? %>
+            <li><a href="/login">Login</a></li>
+            <li><a href="users/signup">Signup</a></li>
+          <% else %>
+            <li><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></li>
+            <li><a href="/logout">Logout</a></li>
+            <li><a href="/games">Games</a></li>
+            <li><a href="/games/new">Create Game</a></li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
 
-        <%= yield %>
-
-      <footer class="branding">
-        <small>&copy; 2021 <strong>VacSched</strong></small>
-      </footer>
+    <div class="container errors">
+      <% if flash[:errors] %>
+        <% flash[:errors].each do |error| %>
+          <p><%= error %></p>
+        <% end %>
+      <% end %>  
     </div>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <div class="container">
+      <%= yield %>
+    </div>
+
     <!--[if lt IE 7]>
       <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
       <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
