--- a/app/views/vaccines/index.html.erb
+++ b/app/views/vaccines/index.html.erb
@@ -1,1 +1,36 @@
-<h1>This is the Model's index page.</h1>
+<h3 class="indigo-text text-darken-3">Vaccine List</h3>
+
+<form action="/vaccines" method="get">
+  <div class="row" style="margin-bottom: 0;">
+    <div class="col s5 input-field" style="margin-left: 0; margin-right: 0; padding-left: 0; padding-right: 0;">
+      <input type="text" name="query" id="query" placeholder="Enter Query">
+    </div>
+  </div>
+  <input type="submit" value="Search" class="btn indigo darken-3">
+</form>
+
+<form action="/vaccines" method="get">
+  <div class="input-field">
+    <select name="filter">
+      <option value="" disabled selected>Filter By Genre</option>
+      <% Vaccine.all_genres.each do |genre| %>
+        <option value="<%= genre %>"><%= genre %></option>
+      <% end %>
+    </select>
+  </div>
+  <input type="submit" value="Filter" class="btn indigo darken-3">
+</form>
+
+<p>Recently Viewed: <%= @Vaccine ? @Vaccine.title : "Haven't viewed any vaccines." %></p>
+
+<ul>
+  <% @vaccines.each do |Vaccine| %>
+    <li><a href="/vaccines/<%= Vaccine.id %>"><%= Vaccine.lot_no %></a></li>
+  <% end %>
+</ul>
+
+<script>
+  $(document).ready(function(){
+    $('select').formSelect();
+  });
+</script>
