Adding more features to Vaccine Controller w/User

--- a/app/views/vaccines/show.html.erb
+++ b/app/views/vaccines/show.html.erb
@@ -1,1 +1,12 @@
-<h1>This is the show page for an individual instance of your model.</h1>
+<h3 class="indigo-text text-darken-3"><%= @vaccine.lot_no %></h3>
+<%# <p>Manufacturer: <%= @vaccine.mfr %></p>
+<%# <p>Vaccine Type: <%= @vaccine.vac_type %></p> %>
+<%# <p>Expiration Date: <%= @vaccine.expir %></p> %>
+<%# <p>Quantity: <%= @vaccine.quantity %></p> %>
+
+
+<%# <form action="/vaccines/<%= @vaccine.id %>" method="post"> %>
+  <%# <a href="/vaccines/<%= @vaccine.id %>/edit" class="btn-small">Edit</a>   %>
+  <%# <input type="hidden" name="_method" value="delete"> %>
+  <%# <input type="submit" value="Delete vaccine" class="btn-small red white-text"> %>
+<%# </form> %> %>
