--- a/app/views/vaccines/show.erb
+++ b/app/views/vaccines/show.erb
@@ -1,12 +1,8 @@
-<h3 class="indigo-text text-darken-3"><%= @vaccine.lot_no %></h3>
-<%# <p>Manufacturer: <%= @vaccine.mfr %></p>
-<%# <p>Vaccine Type: <%= @vaccine.vac_type %></p> %>
-<%# <p>Expiration Date: <%= @vaccine.expir %></p> %>
-<%# <p>Quantity: <%= @vaccine.quantity %></p> %>
+<h3 class="indigo-text text-darken-3">Inventory Item Lot#: <%= @vaccine.lot_no%></h3>
+<table>
+  <tr><th>Type:</th>        <td><%= @vaccine.vac_type%></td></tr>
+  <tr><th>Manufacturer:</th><td><%= @vaccine.mfr%></td></tr>
+  <tr><th>Expiration:</th>  <td><%= @vaccine.expir%></td></tr>
+  <tr><th>Quantity:</th>    <td><%= @vaccine.quantity%></td></tr>
+  </table>
 
-
-<%# <form action="/vaccines/<%= @vaccine.id %>" method="post"> %>
-  <%# <a href="/vaccines/<%= @vaccine.id %>/edit" class="btn-small">Edit</a>   %>
-  <%# <input type="hidden" name="_method" value="delete"> %>
-  <%# <input type="submit" value="Delete vaccine" class="btn-small red white-text"> %>
-<%# </form> %> %>
