--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
-    <title>CV-19VacSched</title>
+    <title>VIMS</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Compiled and minified CSS -->
