Vaccine Index workign again

--- a/app/views/vaccines/edit.erb
+++ b/app/views/vaccines/edit.erb
@@ -8,7 +8,7 @@
   </div>
   
   <div class="input-field">
-    <input id="type" name="vaccine[type]" type="text" class="validate" value="<%= @vaccine.type %>">
+    <input id="type" name="vaccine[vac_type]" type="text" class="validate" value="<%= @vaccine.vac_type %>">
     <label for="type">Type</label>
   </div>
   
