--- a/app/views/vaccines/show.erb
+++ b/app/views/vaccines/show.erb
@@ -4,6 +4,7 @@
   <tr><th>Manufacturer:</th><td><%= @vaccine.mfr%></td></tr>
   <tr><th>Expiration:</th>  <td><%= @vaccine.expir%></td></tr>
   <tr><th>Quantity:</th>    <td><%= @vaccine.quantity%></td></tr>
+  <tr><th>Added to System:
   </table>
 
 <form action="/vaccines/<%= @vaccine.id %>" method="post">
